RESOLVED FIXED58255
Crash in WebPageProxy::countStringMatches
https://bugs.webkit.org/show_bug.cgi?id=58255
Summary Crash in WebPageProxy::countStringMatches
Anders Carlsson
Reported 2011-04-11 12:09:52 PDT
Crash in WebPageProxy::countStringMatches
Attachments
Patch (1.58 KB, patch)
2011-04-11 12:11 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-04-11 12:11:51 PDT
Sam Weinig
Comment 2 2011-04-11 12:12:52 PDT
Comment on attachment 89047 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89047&action=review > Source/WebKit2/ChangeLog:10 > + * UIProcess/WebPageProxy.cpp: > + (WebKit::WebPageProxy::countStringMatches): This could be more descriptive.
Anders Carlsson
Comment 3 2011-04-11 12:15:03 PDT
Note You need to log in before you can comment on or make changes to this bug.