2011-04-11  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Crash in WebPageProxy::countStringMatches
        https://bugs.webkit.org/show_bug.cgi?id=58255
        <rdar://problem/9243837>

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::countStringMatches):
        Return early if the page is not valid.


Canonical link: https://commits.webkit.org/73242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83474 268f45cc-cd09-0410-ab3c-d52691b4dbfc